jpf-inspector/src/tests/gov/nasa/jpf/inspector/tests/acceptance/features/fixheap/heap.out
1 :  state=ENABLED hits=0 hitsTotal=0 instruction_type=any
INFO: JPF created and connected, SuT is started
INFO: Breakpoint hit: [1 :  state=ENABLED hits=1 hitsTotal=1 instruction_type=any]
	SuT (Thread=0) executes the gov/nasa/jpf/inspector/tests/acceptance/sut/Singlepath.java:0 - invokestatic gov.nasa.jpf.inspector.tests.acceptance.sut.Singlepath.main([Ljava/lang/String;)V
ERR: Static area entry discovery is not implemented.
ERR: Parse error: mismatched input '.' expecting <EOF>
#static[*].member
          ^
ERR: Parse error: mismatched input '.' expecting <EOF>
#heap[*].member
        ^
Breakpoint with ID 1 successfully deleted.
INFO: JPF Terminating